<resources>
    <string name="app_name">daVárzea</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="group_fragment_label">Meus grupos</string>
    <string name="soccer_player_fragment_label">Jogadores</string>
    <string name="competition_fragment_label">Sortear times</string>
    <string name="soccer_player_details_fragment_label">Detalhes do jogador</string>
    <string name="competition_details_fragment_label">Detalhes do torneio</string>
    <string name="competition_group_fragment_label">Detalhes do grupo</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="minimo_de_jogadores">Mínimo de jogadores: %s</string>
    <string name="minimo_por_time">Mínimo por time: %s</string>
    <string name="quantidade_de_times">Times: %s</string>

    <string name="hint_text_input_name_item">Digite um nome para o item</string>
    <string name="hint_text_input_name_player">Digite um nome para o jogador</string>
    <string name="hint_text_input_list_players"><font size="12">ex:\n\nBruno|30|LAT;\nPedro|25|ZAG;\nJoão|40|GK;\n\nou\n\nBruno|30|LAT|N|4.0|2.0|4.5|3.5|2.0|5.0;\nPedro|25|ZAG|S|4.0|2.0|1.5|3.5|2.0|2.0;\nJoão|40|GK|N|4.0|2.0|4.5|2.5|2.0|3.0;</font></string>
<!--    <string name="hint_text_input_list_players">ex:\nBruno|30;\nPedro|25;\nJoão|40;\nou\nBruno|30|LAT;\nPedro|25|ZAG;\nJoão|40|GK;\nou\nBruno|30|LAT|N|4.0|2.0|4.5|3.5|2.0|5.0;\nPedro|25|ZAG|S|4.0|2.0|1.5|3.5|2.0|2.0;\nJoão|40|GK|N|4.0|2.0|4.5|2.5|2.0|3.0;</string>-->
    <string name="valor_unitario">Valor unit</string>
    <string name="desconto">Desconto</string>
    <string name="hint_text_input_dueDate">dd/mm/aaaa</string>
    <string name="data_vencimento">Data vencimento</string>
    <string name="save">Salvar</string>
    <string name="exclude">Excluir</string>
    <string name="default_monetary_value">R$ 00,00</string>
    <string name="finish">Finalizar</string>
    <string name="action_edit_list">Editar</string>
    <string name="confirm">Confirmar</string>
    <string name="hint_text_input_category">Digite um nome para categoria</string>
    <string name="label_title_category">Categoria</string>

    <string name="name">Nome</string>
    <string name="players">Jogadores</string>
    <string name="hint_text_input_name_list">Digite um nome para sua lista</string>
    <string name="details_item_title">Details item</string>
    <string name="idade">idade</string>
    <string name="habilidade">Habilidade</string>
    <string name="sort">Sortear</string>
    <string name="exclude_groups">Você deseja excluir o grupo %s? \n\nCom isso você perderá acesso a todas as configurações desse grupo.</string>
    <string name="exclude_soccer_players">Você deseja excluir sua lista de jogadores? \n\nEssa ação irá excluir todos os jogadores desse grupo.</string>
    <string name="exclude_competition">Você deseja excluir a competição %s? \n\nCom isso você perderá acesso a todas as configurações dessa competição.</string>
    <string name="details_group_fragment_label" >Detalhes grupo</string>
    <string name="game_information_configuration">%1$s x %2$s</string>
    <string name="game_information_single_price">R$ %s</string>
    <string name="game_information_monthly_price">R$ %s</string>
    <string name="game_information_rate_age">%1$s a %2$s anos</string>

    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_shared">Compartilhar</string>

    <string name="action_cropper_rotate">Rotate 90 degrees clockwise</string>
    <string name="action_cropper_crop">CROP</string>



    <string name="result_image_desc">crop result</string>
    <string name="main_action_crop">CROP</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="fit_center">Fit Center</string>
    <string name="center">Center</string>
    <string name="center_crop">Center Crop</string>
    <string name="center_inside">Center Inside</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="rectangleVerticalOnly">Rectangle - vertical only</string>
    <string name="rectangleHorizontalOnly">Rectangle - horizontal only</string>
    <string name="off">Off</string>
    <string name="on_touch">On Touch</string>
    <string name="on">ON</string>
    <string name="ratio_16_9">16,9</string>
    <string name="ratio_4_3">4,3</string>
    <string name="ratio_2_1">2,1</string>
    <string name="ratio_1_1">1,1</string>
    <string name="free">Free</string>
    <string name="ratio">Ratio</string>
    <string name="guidelines">Guidelines</string>
    <string name="crop_shape">Crop Shape</string>
    <string name="scale_type">Scale Type</string>
    <string name="max_zoom_level">Max Zoom Level</string>
    <string name="zoom_2">2</string>
    <string name="zoom_4">4</string>
    <string name="zoom_8">8</string>
    <string name="auto_zoom">Auto Zoom</string>
    <string name="multi_touch">Multi Touch</string>
    <string name="center_move">Enable movement by dragging center</string>
    <string name="show_crop_overlay">Show Crop Overlay</string>
    <string name="show_progress_bar">Show Progress Bar</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="reset">Redefinir alterações</string>
    <string name="sample_using_cropimageview">Sample using CropImageView</string>
    <string name="sample_of_customactivity">Sample of CustomActivity</string>
    <string name="sample_calling_cropimage">Sample calling CropImage</string>
    <string name="takePictureBeforeCallLibraryWithUri_text">Take camera picture before calling library with uri</string>
    <string name="callLibraryWithoutUri_text">Call library directly without uri</string>
    <string name="callLibraryWithoutUriCameraOnly_text">Call library directly without uri. Camera only</string>
    <string name="callLibraryWithoutUriGalleryOnly_text">Call library directly without uri. Gallery only</string>
    <string name="rotation_value">Click to change rotation: %1$s</string>
    <string name="crop_corner__shape">Corner Shape</string>
    <string name="show_crop_label_text">Show Crop Label Text</string>
    <string name="default_crop_label_text">Sample crop label</string>

</resources>