<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_top_rounded_border"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:id="@+id/view_item_drag_handle"
        android:layout_width="80dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@drawable/drag_handle_background" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/containert_infos_soccer_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/container_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_details_soccer_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Detalhes do jogador"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_item_drag_handle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_detailsPlayerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_soccer_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_textInput_detailsPlayerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_text_input_name_player"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_detailsPlayerAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/idade"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_soccer_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_textInput_detailsPlayerAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Digite a idade do jogador"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_detailsPlayerPosition"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Posição jogador"
                app:expandedHintEnabled="false">

                <AutoCompleteTextView
                    android:id="@+id/editText_textInput_detailsPlayerPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="false"
                    android:hint="Selecione uma posição"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switch_detailsPlayerDM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Está no DM?"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_add_item" />

            <include
                android:id="@+id/item_player_rating_speed"
                layout="@layout/item_player_rating" />

            <include
                android:id="@+id/item_player_rating_kick"
                layout="@layout/item_player_rating" />

            <include
                android:id="@+id/item_player_rating_pass"
                layout="@layout/item_player_rating" />

            <include
                android:id="@+id/item_player_rating_marking"
                layout="@layout/item_player_rating" />

            <include
                android:id="@+id/item_player_rating_dribble"
                layout="@layout/item_player_rating" />

            <include
                android:id="@+id/item_player_rating_race"
                layout="@layout/item_player_rating" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ViewFlipper
        android:id="@+id/flipper_save_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_item"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/save"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progress_save_item"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />
    </ViewFlipper>

    <ViewFlipper
        android:id="@+id/flipper_exclude_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_exclude_item"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/exclude"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="8dp" />

        <ProgressBar
            android:id="@+id/progress_exclude_item"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center" />

    </ViewFlipper>


</LinearLayout>